@@ -90,6 +90,8 @@ public:
   void SetAutodetectedXbox(bool set) { m_hasAutoDetectedXbox = set; };
   bool HasAutodetectedXbox() const { return m_hasAutoDetectedXbox; };
 
+  CStdString ParseLabel(const CStdString &label);
+
 protected:
   int TranslateSingleString(const CStdString &strCondition);
   CStdString GetItemLabel(const CFileItem *item, int info);
